# fast-depth-compression

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
backend/: CMakeLists.txt
backend/bindings/: CMakeLists.txt  bindings.cpp
backend/cpp/: CMakeLists.txt
backend/cpp/include/: rvl.h  trvl.h
backend/cpp/src/: trvl.cpp
examples/: encoder.ipynb  encoding.py  saving.py
fdcomp/: __init__.py  decoder.py  encoder.py  fdcomp.py
